now lets try day mode

--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 <body>
 
     <nav>
-        <button class="day_mode">Day</button>
-        <!-- <div class="nav_button">
-            <button class="screen_mode">
-                <img src="./img/day_mode.png" id="day_mode" alt="day_mode">
-            </button>
-        </div> -->
+        <!-- <button class="day_mode">Day</button> -->
+        <button class="screen_mode">
+            <img src="./img/day_mode.png" id="day_mode" alt="day_mode">
+        </button>
     </nav>
 
     <header>
