so now toggle the button for nite mode

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 
     <nav>
         <!-- <button class="day_mode">Day</button> -->
-        <button class="screen_mode">
-            <img src="./img/day_mode.png" id="day_mode" alt="day_mode">
+        <button id="screen_mode">
+            <!-- Put the pics in a div -->
+             <div class="nite_day">
+                <img src="./img/day_mode.png" id="day_mode" alt="day_mode">
+                <img src="./img/nite_mode.png" id="nite_mode" alt="nite_mode">
+             </div>
         </button>
     </nav>
 
